fixing several code smells